; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_user.c_mach_vm_wire_kernel.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_user.c_mach_vm_wire_kernel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HOST_PRIV_NULL = common dso_local global i32* null, align 8
@KERN_INVALID_HOST = common dso_local global i32 0, align 4
@realhost = common dso_local global i32 0, align 4
@VM_MAP_NULL = common dso_local global i64 0, align 8
@KERN_INVALID_TASK = common dso_local global i32 0, align 4
@VM_PROT_ALL = common dso_local global i32 0, align 4
@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4
@VM_PROT_NONE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mach_vm_wire_kernel(i32* %0, i64 %1, i64 %2, i64 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i64 %1, i64* %9, align 8
  store i64 %2, i64* %10, align 8
  store i64 %3, i64* %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = load i32*, i32** @HOST_PRIV_NULL, align 8
  %17 = icmp eq i32* %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %6
  %19 = load i32, i32* @KERN_INVALID_HOST, align 4
  store i32 %19, i32* %7, align 4
  br label %80

20:                                               ; preds = %6
  %21 = load i32*, i32** %8, align 8
  %22 = icmp eq i32* %21, @realhost
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i64, i64* %9, align 8
  %26 = load i64, i64* @VM_MAP_NULL, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %20
  %29 = load i32, i32* @KERN_INVALID_TASK, align 4
  store i32 %29, i32* %7, align 4
  br label %80

30:                                               ; preds = %20
  %31 = load i32, i32* %12, align 4
  %32 = load i32, i32* @VM_PROT_ALL, align 4
  %33 = xor i32 %32, -1
  %34 = and i32 %31, %33
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %42, label %36

36:                                               ; preds = %30
  %37 = load i64, i64* %10, align 8
  %38 = load i64, i64* %11, align 8
  %39 = add nsw i64 %37, %38
  %40 = load i64, i64* %10, align 8
  %41 = icmp slt i64 %39, %40
  br i1 %41, label %42, label %44

42:                                               ; preds = %36, %30
  %43 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %43, i32* %7, align 4
  br label %80

44:                                               ; preds = %36
  %45 = load i32, i32* %12, align 4
  %46 = load i32, i32* @VM_PROT_NONE, align 4
  %47 = icmp ne i32 %45, %46
  br i1 %47, label %48, label %64

48:                                               ; preds = %44
  %49 = load i64, i64* %9, align 8
  %50 = load i64, i64* %10, align 8
  %51 = load i64, i64* %9, align 8
  %52 = call i32 @VM_MAP_PAGE_MASK(i64 %51)
  %53 = call i32 @vm_map_trunc_page(i64 %50, i32 %52)
  %54 = load i64, i64* %10, align 8
  %55 = load i64, i64* %11, align 8
  %56 = add nsw i64 %54, %55
  %57 = load i64, i64* %9, align 8
  %58 = call i32 @VM_MAP_PAGE_MASK(i64 %57)
  %59 = call i32 @vm_map_round_page(i64 %56, i32 %58)
  %60 = load i32, i32* %12, align 4
  %61 = load i32, i32* %13, align 4
  %62 = load i32, i32* @TRUE, align 4
  %63 = call i32 @vm_map_wire_kernel(i64 %49, i32 %53, i32 %59, i32 %60, i32 %61, i32 %62)
  store i32 %63, i32* %14, align 4
  br label %78

64:                                               ; preds = %44
  %65 = load i64, i64* %9, align 8
  %66 = load i64, i64* %10, align 8
  %67 = load i64, i64* %9, align 8
  %68 = call i32 @VM_MAP_PAGE_MASK(i64 %67)
  %69 = call i32 @vm_map_trunc_page(i64 %66, i32 %68)
  %70 = load i64, i64* %10, align 8
  %71 = load i64, i64* %11, align 8
  %72 = add nsw i64 %70, %71
  %73 = load i64, i64* %9, align 8
  %74 = call i32 @VM_MAP_PAGE_MASK(i64 %73)
  %75 = call i32 @vm_map_round_page(i64 %72, i32 %74)
  %76 = load i32, i32* @TRUE, align 4
  %77 = call i32 @vm_map_unwire(i64 %65, i32 %69, i32 %75, i32 %76)
  store i32 %77, i32* %14, align 4
  br label %78

78:                                               ; preds = %64, %48
  %79 = load i32, i32* %14, align 4
  store i32 %79, i32* %7, align 4
  br label %80

80:                                               ; preds = %78, %42, %28, %18
  %81 = load i32, i32* %7, align 4
  ret i32 %81
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vm_map_wire_kernel(i64, i32, i32, i32, i32, i32) #1

declare dso_local i32 @vm_map_trunc_page(i64, i32) #1

declare dso_local i32 @VM_MAP_PAGE_MASK(i64) #1

declare dso_local i32 @vm_map_round_page(i64, i32) #1

declare dso_local i32 @vm_map_unwire(i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
